--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,3 @@
 {
-	"C_Cpp.errorSquiggles": "disabled",
-	"files.associations": {
-		"*.embeddedhtml": "html",
-		"ostream": "cpp"
-	}
+	"C_Cpp.errorSquiggles": "disabled"
 }
